// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Variant should render arrays of components 1`] = `
<CoreExperiment
  defaultVariantName="A"
  name="array-of-elements"
>
  <Pushtell.Variant
    name="A"
  >
    <span>
      <div
        id="variant-a"
      />
      <div />
    </span>
  </Pushtell.Variant>
</CoreExperiment>
`;

exports[`Variant should render components 1`] = `
<CoreExperiment
  defaultVariantName="A"
  name="components"
>
  <Pushtell.Variant
    name="A"
  >
    <div
      id="variant-a"
    />
  </Pushtell.Variant>
</CoreExperiment>
`;
